// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TRB Advice Letter Form matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="trb-form-header"
  >
    <div
      class="bg-gray-5 padding-bottom-6"
    >
      <div
        class="grid-container"
        data-testid="gridContainer"
      >
        <div
          class="grid-row"
          data-testid="grid"
        >
          <div
            class="grid-col"
            data-testid="grid"
          >
            <nav
              aria-label="Breadcrumbs"
              class="usa-breadcrumb padding-bottom-0"
              style="background-color: transparent;"
            >
              <ol
                class="usa-breadcrumb__list"
              >
                <li
                  class="usa-breadcrumb__list-item"
                >
                  <a
                    class="usa-breadcrumb__link"
                    href="/trb"
                  >
                    <span>
                      Home
                    </span>
                  </a>
                </li>
                <li
                  class="usa-breadcrumb__list-item"
                >
                  <a
                    class="usa-breadcrumb__link"
                    href="/trb/fd1eec78-dff5-4c26-8924-44872a2b0414/advice"
                  >
                    <span>
                      Request fd1eec78-dff5-4c26-8924-44872a2b0414
                    </span>
                  </a>
                </li>
                <li
                  aria-current="page"
                  class="usa-breadcrumb__list-item usa-current"
                >
                  <span>
                    Advice letter
                  </span>
                </li>
              </ol>
            </nav>
            <h1
              aria-live="polite"
              class="easi-h1 margin-bottom-0"
              tabindex="-1"
            >
              Advice letter
            </h1>
            <div
              class="font-body-lg line-height-body-5 text-light"
            >
              Document any outcomes, advice, findings, recommendations, or next steps that the TRB has for this request.
            </div>
            <div
              class="margin-top-2 line-height-body-5"
            >
              After submitting this form, the requester will recieve an automatic notification letting them know their advice letter is available.
            </div>
            <div
              class="margin-top-3"
            >
              <button
                class="usa-button usa-button--unstyled"
                data-testid="button"
                type="button"
              >
                <svg
                  class="usa-icon margin-right-05 margin-bottom-2px text-tbottom"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                  />
                </svg>
                Save and return to request
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="grid-container"
      data-testid="gridContainer"
    >
      <div
        aria-label="progress"
        class="usa-step-indicator margin-top-4 margin-bottom-2"
        data-testid="step-indicator"
      >
        <ol
          class="usa-step-indicator__segments"
        >
          <li
            aria-current="true"
            class="usa-step-indicator__segment usa-step-indicator__segment--current usa-step-indicator__segment--clickable"
          >
            <span
              class="usa-step-indicator__segment-label"
            >
              <span
                class="name"
              >
                What we heard
              </span>
              <span
                class="long"
              >
                What we heard
              </span>
               
            </span>
          </li>
          <li
            class="usa-step-indicator__segment usa-step-indicator__segment--clickable"
          >
            <span
              class="usa-step-indicator__segment-label"
            >
              <span
                class="name"
              >
                What we recommend
              </span>
              <span
                class="long"
              >
                What we recommend
              </span>
               
              <span
                class="usa-sr-only"
              >
                not completed
              </span>
            </span>
          </li>
          <li
            class="usa-step-indicator__segment usa-step-indicator__segment--clickable"
          >
            <span
              class="usa-step-indicator__segment-label"
            >
              <span
                class="name"
              >
                Next steps
              </span>
              <span
                class="long"
              >
                Next steps
              </span>
               
              <span
                class="usa-sr-only"
              >
                not completed
              </span>
            </span>
          </li>
          <li
            class="usa-step-indicator__segment usa-step-indicator__segment--clickable"
          >
            <span
              class="usa-step-indicator__segment-label"
            >
              <span
                class="name"
              >
                Internal review
              </span>
              <span
                class="long"
              >
                Check your work and request an internal review
              </span>
               
              <span
                class="usa-sr-only"
              >
                not completed
              </span>
            </span>
          </li>
          <li
            class="usa-step-indicator__segment usa-step-indicator__segment--clickable"
          >
            <span
              class="usa-step-indicator__segment-label"
            >
              <span
                class="name"
              >
                Check and send
              </span>
              <span
                class="long"
              >
                Check the content of your advice letter and send it to the requester
              </span>
               
              <span
                class="usa-sr-only"
              >
                not completed
              </span>
            </span>
          </li>
        </ol>
        <div
          class="usa-step-indicator__header"
        >
          <h4
            class="usa-step-indicator__heading"
          >
            <span
              class="usa-step-indicator__heading-counter"
            >
              <span
                class="usa-sr-only"
              >
                Step
              </span>
              <span
                class="usa-step-indicator__current-step"
              >
                1
              </span>
               
              <span
                class="usa-step-indicator__total-steps"
              >
                of 5
              </span>
               
            </span>
            <span
              class="usa-step-indicator__heading-text"
            >
              <span
                class="name"
              >
                What we heard
              </span>
              <span
                class="long"
              >
                What we heard
              </span>
            </span>
          </h4>
        </div>
      </div>
      <div
        class="line-height-body-5 text-light"
      >
        Provide a brief but detailed summary of the purpose of the session, what was discussed or presented, and any other meeting details of note.
      </div>
    </div>
  </div>
  <div
    class="grid-container"
    data-testid="gridContainer"
  >
    <div
      class=""
      data-testid="grid"
    >
      <form
        class="usa-form maxw-tablet"
        data-testid="form"
        id="trbAdviceSummary"
      >
        <div
          class="easi-help-text margin-top-1 margin-bottom-1 text-base"
        >
          Fields marked with an asterisk ( 
          <span
            class="text-red"
          >
            *
          </span>
           ) are required.
        </div>
        <div
          class="usa-form-group"
          data-testid="formGroup"
        >
          <label
            class="usa-label text-normal"
            for="meetingSummary"
          >
            Meeting summary 
            <span
              class="text-red"
            >
               *
            </span>
          </label>
          <textarea
            class="usa-textarea"
            id="meetingSummary"
            name="meetingSummary"
          >
            Meeting summary text
          </textarea>
        </div>
        <div
          class="margin-top-4"
        >
          <ul
            class="usa-button-group"
          >
            <li
              class="usa-button-group__item"
            >
              <button
                class="usa-button usa-button--outline margin-top-0 margin-bottom-1 mobile-lg:margin-bottom-0"
                data-testid="button"
                type="button"
              >
                Cancel
              </button>
            </li>
            <li
              class="usa-button-group__item"
            >
              <button
                class="usa-button margin-top-0"
                data-testid="button"
                type="submit"
              >
                Next
              </button>
            </li>
          </ul>
          <button
            class="usa-button usa-button--unstyled margin-top-2 display-flex flex-align-center"
            data-testid="button"
            type="button"
          >
            <svg
              class="usa-icon margin-right-05"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
            Save and return to request
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TRB Advice Letter Form renders the Internal Review step 1`] = `
<DocumentFragment>
  <div
    class="trb-form-header"
  >
    <div
      class="bg-gray-5 padding-bottom-6"
    >
      <div
        class="grid-container"
        data-testid="gridContainer"
      >
        <div
          class="grid-row"
          data-testid="grid"
        >
          <div
            class="grid-col"
            data-testid="grid"
          >
            <nav
              aria-label="Breadcrumbs"
              class="usa-breadcrumb padding-bottom-0"
              style="background-color: transparent;"
            >
              <ol
                class="usa-breadcrumb__list"
              >
                <li
                  class="usa-breadcrumb__list-item"
                >
                  <a
                    class="usa-breadcrumb__link"
                    href="/trb"
                  >
                    <span>
                      Home
                    </span>
                  </a>
                </li>
                <li
                  class="usa-breadcrumb__list-item"
                >
                  <a
                    class="usa-breadcrumb__link"
                    href="/trb/fd1eec78-dff5-4c26-8924-44872a2b0414/advice"
                  >
                    <span>
                      Request fd1eec78-dff5-4c26-8924-44872a2b0414
                    </span>
                  </a>
                </li>
                <li
                  aria-current="page"
                  class="usa-breadcrumb__list-item usa-current"
                >
                  <span>
                    Advice letter
                  </span>
                </li>
              </ol>
            </nav>
            <h1
              aria-live="polite"
              class="easi-h1 margin-bottom-0"
              tabindex="-1"
            >
              Advice letter
            </h1>
            <div
              class="font-body-lg line-height-body-5 text-light"
            >
              Document any outcomes, advice, findings, recommendations, or next steps that the TRB has for this request.
            </div>
            <div
              class="margin-top-2 line-height-body-5"
            >
              After submitting this form, the requester will recieve an automatic notification letting them know their advice letter is available.
            </div>
            <div
              class="margin-top-3"
            >
              <button
                class="usa-button usa-button--unstyled"
                data-testid="button"
                type="button"
              >
                <svg
                  class="usa-icon margin-right-05 margin-bottom-2px text-tbottom"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                  />
                </svg>
                Save and return to request
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="grid-container"
      data-testid="gridContainer"
    >
      <div
        aria-label="progress"
        class="usa-step-indicator margin-top-4 margin-bottom-2"
        data-testid="step-indicator"
      >
        <ol
          class="usa-step-indicator__segments"
        >
          <li
            class="usa-step-indicator__segment usa-step-indicator__segment--complete usa-step-indicator__segment--clickable"
          >
            <span
              class="usa-step-indicator__segment-label"
            >
              <span
                class="name"
              >
                What we heard
              </span>
              <span
                class="long"
              >
                What we heard
              </span>
               
              <span
                class="usa-sr-only"
              >
                completed
              </span>
            </span>
          </li>
          <li
            class="usa-step-indicator__segment usa-step-indicator__segment--complete usa-step-indicator__segment--clickable"
          >
            <span
              class="usa-step-indicator__segment-label"
            >
              <span
                class="name"
              >
                What we recommend
              </span>
              <span
                class="long"
              >
                What we recommend
              </span>
               
              <span
                class="usa-sr-only"
              >
                completed
              </span>
            </span>
          </li>
          <li
            class="usa-step-indicator__segment usa-step-indicator__segment--complete usa-step-indicator__segment--clickable"
          >
            <span
              class="usa-step-indicator__segment-label"
            >
              <span
                class="name"
              >
                Next steps
              </span>
              <span
                class="long"
              >
                Next steps
              </span>
               
              <span
                class="usa-sr-only"
              >
                completed
              </span>
            </span>
          </li>
          <li
            aria-current="true"
            class="usa-step-indicator__segment usa-step-indicator__segment--current usa-step-indicator__segment--clickable"
          >
            <span
              class="usa-step-indicator__segment-label"
            >
              <span
                class="name"
              >
                Internal review
              </span>
              <span
                class="long"
              >
                Check your work and request an internal review
              </span>
               
            </span>
          </li>
          <li
            class="usa-step-indicator__segment usa-step-indicator__segment--clickable"
          >
            <span
              class="usa-step-indicator__segment-label"
            >
              <span
                class="name"
              >
                Check and send
              </span>
              <span
                class="long"
              >
                Check the content of your advice letter and send it to the requester
              </span>
               
              <span
                class="usa-sr-only"
              >
                not completed
              </span>
            </span>
          </li>
        </ol>
        <div
          class="usa-step-indicator__header"
        >
          <h4
            class="usa-step-indicator__heading"
          >
            <span
              class="usa-step-indicator__heading-counter"
            >
              <span
                class="usa-sr-only"
              >
                Step
              </span>
              <span
                class="usa-step-indicator__current-step"
              >
                4
              </span>
               
              <span
                class="usa-step-indicator__total-steps"
              >
                of 5
              </span>
               
            </span>
            <span
              class="usa-step-indicator__heading-text"
            >
              <span
                class="name"
              >
                Internal review
              </span>
              <span
                class="long"
              >
                Check your work and request an internal review
              </span>
            </span>
          </h4>
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-container"
    data-testid="gridContainer"
  >
    <div
      class=""
      data-testid="grid"
    >
      <div
        id="trbAdviceInternalReview"
      >
        <div
          class="margin-top-5 margin-bottom-4"
        >
          <p
            class="text-bold margin-bottom-0"
          >
            Send date
          </p>
          <p
            class="margin-top-1"
          >
            Not yet sent
          </p>
          <div
            class="easi-section easi-section__border-top margin-top-6 padding-top-1"
            data-testid="section-wrapper"
          >
            <h2
              class="margin-bottom-1"
            >
              What we heard
            </h2>
            <a
              class="usa-link display-block margin-bottom-5"
              href="/trb/fd1eec78-dff5-4c26-8924-44872a2b0414/advice/summary"
            >
              Edit this section
            </a>
            <p
              class="text-bold margin-top-4 margin-bottom-0"
            >
              Meeting summary
            </p>
            <p
              class="margin-top-1 line-height-body-5"
            >
              Meeting summary text
            </p>
          </div>
          <div
            class="easi-section easi-section__border-top margin-top-6 padding-top-1"
            data-testid="section-wrapper"
          >
            <h2
              class="margin-bottom-1"
            >
              What we recommend
            </h2>
            <a
              class="usa-link display-block margin-bottom-2"
              href="/trb/fd1eec78-dff5-4c26-8924-44872a2b0414/advice/recommendations"
            >
              Edit this section
            </a>
            <ul
              class="usa-list usa-list--unstyled grid-row grid-gap-lg"
            >
              <li
                class="desktop:grid-col-6"
              >
                <h4
                  class="margin-bottom-1"
                >
                  Recommendation 1
                </h4>
                <p
                  class="margin-y-1"
                >
                  This is the recommendation text
                </p>
                <ul
                  class="usa-list usa-list--unstyled"
                >
                  <li>
                    <a
                      aria-label="Open easi.cms.gov in a new tab"
                      class="usa-link display-block margin-top-05"
                      href="/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      easi.cms.gov
                    </a>
                  </li>
                  <li>
                    <a
                      aria-label="Open https://google.com in a new tab"
                      class="usa-link usa-link--external display-block margin-top-05"
                      href="https://google.com/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      google.com
                    </a>
                  </li>
                </ul>
                <ul
                  class="usa-button-group margin-top-2"
                >
                  <li
                    class="usa-button-group__item"
                  >
                    <button
                      class="usa-button usa-button--unstyled"
                      data-testid="button"
                      type="button"
                    >
                      Edit recommendation
                    </button>
                  </li>
                  <li
                    class="usa-button-group__item"
                  >
                    <button
                      class="usa-button usa-button--unstyled text-secondary margin-left-1"
                      data-testid="button"
                      type="button"
                    >
                      Remove recommendation
                    </button>
                  </li>
                </ul>
              </li>
              <li
                class="desktop:grid-col-6"
              >
                <h4
                  class="margin-bottom-1"
                >
                  Recommendation 2
                </h4>
                <p
                  class="margin-y-1"
                >
                  This is the recommendation text
                </p>
                <ul
                  class="usa-list usa-list--unstyled"
                >
                  <li>
                    <a
                      aria-label="Open easi.cms.gov in a new tab"
                      class="usa-link display-block margin-top-05"
                      href="/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      easi.cms.gov
                    </a>
                  </li>
                  <li>
                    <a
                      aria-label="Open cms.gov in a new tab"
                      class="usa-link usa-link--external display-block margin-top-05"
                      href="https://cms.gov/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      cms.gov
                    </a>
                  </li>
                </ul>
                <ul
                  class="usa-button-group margin-top-2"
                >
                  <li
                    class="usa-button-group__item"
                  >
                    <button
                      class="usa-button usa-button--unstyled"
                      data-testid="button"
                      type="button"
                    >
                      Edit recommendation
                    </button>
                  </li>
                  <li
                    class="usa-button-group__item"
                  >
                    <button
                      class="usa-button usa-button--unstyled text-secondary margin-left-1"
                      data-testid="button"
                      type="button"
                    >
                      Remove recommendation
                    </button>
                  </li>
                </ul>
              </li>
            </ul>
          </div>
          <div
            class="easi-section easi-section__border-top margin-top-6 padding-top-1"
            data-testid="section-wrapper"
          >
            <h2
              class="margin-bottom-1"
            >
              Next steps
            </h2>
            <a
              class="usa-link display-block margin-bottom-5"
              href="/trb/fd1eec78-dff5-4c26-8924-44872a2b0414/advice/next-steps"
            >
              Edit this section
            </a>
            <p
              class="text-bold margin-top-4 margin-bottom-1"
            >
              Next steps
            </p>
            <p
              class="margin-top-1 line-height-body-5"
            >
              These are the next steps
            </p>
            <p
              class="text-bold margin-top-3 margin-bottom-1"
            >
              Should the team return for a follow-up session?
            </p>
            <p
              class="margin-top-1 line-height-body-5"
            >
              Yes, Six months from now
            </p>
          </div>
        </div>
        <div
          class="easi-divider"
        />
        <div
          class="usa-alert usa-alert--warning margin-top-4 margin-bottom-5"
          data-testid="alert"
        >
          <div
            class="usa-alert__body"
          >
            <h4
              class="usa-alert__heading"
            >
              Internal TRB review needed
            </h4>
            <p
              class="usa-alert__text"
            >
              You should not send this advice letter until it has been reviewed internally by other TRB members. Once it has been reviewed and you have made any suggested edits, choose notification recipients and send.
            </p>
          </div>
        </div>
        <div
          class=""
        >
          <ul
            class="usa-button-group"
          >
            <li
              class="usa-button-group__item"
            >
              <button
                class="usa-button usa-button--outline margin-top-0 margin-bottom-1 mobile-lg:margin-bottom-0"
                data-testid="button"
                type="button"
              >
                Back
              </button>
            </li>
            <li
              class="usa-button-group__item"
            >
              <button
                class="usa-button margin-top-0"
                data-testid="button"
                type="submit"
              >
                Request internal review
              </button>
            </li>
            <li
              class="usa-button-group__item"
            >
              or, 
              <button
                class="usa-button usa-button--unstyled"
                data-testid="button"
                type="button"
              >
                progress to next step
              </button>
            </li>
          </ul>
          <button
            class="usa-button usa-button--unstyled margin-top-2 display-flex flex-align-center"
            data-testid="button"
            type="button"
          >
            <svg
              class="usa-icon margin-right-05"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
            Save and return to request
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
